Starting section team on desktop version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,3 +352,67 @@ header {
 .section-projects--photoarea:hover .section-projects--photoinfo {
   display: flex;
 }
+
+.bg-team {
+  background-image: url(../images/bg-team.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 0;
+}
+
+.section-team-area {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+
+.section-team {
+  overflow: hidden;
+  max-width: 1110px;
+  margin: auto;
+}
+
+.section-team .sliders {
+  width: 1000vw;
+  height: 100%;
+}
+
+.section-team .slide {
+  width: 350px;
+  height: 100%;
+  min-height: 430px;
+  display: inline-block;
+  background-color: #fff;
+  margin-right: 20px;
+}
+
+.section-team .slidearea {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+
+.section-team-area .paginatorarea {
+  margin-top: 55px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-team-area .paginatoritem {
+  width: 12px;
+  height: 12px;
+  border: 2px solid #b88b58;
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.section-team-area .paginatoritem.active {
+  background-color: #b88b58;
+}
