--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,3 +464,87 @@ header {
 }
 
 /*-----------------------------------------------*/
+
+/*Section testmonial*/
+
+.testimonials .section-body {
+  max-width: initial;
+}
+
+.section-testimonials {
+  overflow: hidden;
+}
+
+.section-testimonials .sliders {
+  width: 1000vw;
+  height: 100%;
+}
+
+.section-testimonials .slide {
+  width: 100vw;
+  height: 100%;
+  display: inline-block;
+}
+
+.section-testimonials .slidearea {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-testimonials--avatar {
+  width: 150px;
+}
+
+.section-testimonials--name {
+  font-weight: 600;
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+.section-testimonials--role {
+  font-size: 18px;
+}
+
+.section-testimonials--quoteimg {
+  width: 27px;
+  margin-top: 35px;
+}
+
+.section-testimonials--quote {
+  margin-top: 10px;
+  font-size: 14px;
+  max-width: 700px;
+  color: #7e7e7e;
+  text-align: center;
+  line-height: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.section-testimonials .paginatorarea {
+  width: 100vw;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.section-testimonials .paginatoritem {
+  width: 12px;
+  height: 12px;
+  border: 2px solid #b88b58;
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.section-testimonials .paginatoritem.active {
+  background-color: #b88b58;
+}
+
+/*---------------------------------------------------*/
