--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,8 +188,8 @@ header {
   margin: auto;
 }
 
-.default.ligth {
-  background-color: #f7f7f7;
+.default.light {
+  background-color: #ededed;
 }
 
 .default.ligth .section-title,
@@ -583,3 +583,278 @@ header {
 }
 
 /*--------------------------------------*/
+
+/*Price section*/
+.section-body .section-price {
+  background-color: #ededed;
+}
+.section-price {
+  display: flex;
+}
+
+.section-price--item {
+  flex: 1;
+  background-color: #fff;
+  margin-right: 20px;
+  padding: 30px;
+  text-align: center;
+}
+
+.section-price--item:last-child {
+  margin-right: 0;
+}
+
+.section-price--item-name {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+  color: #242424;
+}
+
+.section-price--item-money {
+  font-size: 30px;
+  font-weight: bold;
+  color: #242424;
+  margin-top: 20px;
+}
+.section-price--item-period {
+  font-size: 10px;
+  color: #aeaeae;
+  margin-bottom: 25px;
+}
+.section-price--item-point {
+  font-size: 10px;
+  color: #7e7e7e;
+}
+
+/*----------------------------------------*/
+
+/*Premium Section*/
+
+.premium {
+  background-color: #fff !important;
+  border-top: 1px solid #ccc;
+}
+
+.premium .section-body {
+  max-width: initial;
+}
+
+.section-premium {
+  overflow: hidden;
+}
+
+.section-premium a {
+  margin-top: 30px;
+}
+
+.section-premium .sliders {
+  width: 1000vw;
+  height: 100%;
+}
+
+.section-premium .slide {
+  width: 100vw;
+  height: 100%;
+  display: inline-block;
+}
+
+.section-premium .slidearea {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  max-width: 1140px;
+  border-bottom: 1px solid #cfcfcf;
+  margin: auto;
+  padding-bottom: 55px;
+}
+
+.section-premium--left {
+  flex: 1;
+  text-align: right;
+}
+
+.section-premium--left img {
+  width: 410px;
+  margin-right: 120px;
+}
+
+.section-premium--right {
+  flex: 1;
+}
+
+.section-premium--item {
+  display: flex;
+  margin-bottom: 45px;
+}
+
+.section-premium--item img {
+  width: 34px;
+  height: 30px;
+  margin-right: 35px;
+}
+
+.section-premium--item div {
+  flex: 1;
+  color: #5b5b5b;
+  line-height: 25px;
+}
+
+.section-premium--item div h4 {
+  color: #242424;
+  font-size: 21px;
+  font-weight: bold;
+}
+
+.section-premium .paginatorarea {
+  width: 100vw;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+.section-premium .paginatoritem {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #b28756;
+  border-radius: 8px;
+  margin-left: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+.section-premium .paginatoritem.active {
+  background-color: #b28756;
+}
+
+.section-premium .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+/*---------------------------------*/
+
+/*Some Facts Section*/
+
+.section-facts {
+  display: flex;
+}
+.section-fact {
+  flex: 1;
+  text-align: center;
+  padding: 15px;
+}
+.section-fact h3 {
+  color: #b28756;
+  font-size: 45px;
+}
+.section-fact-line {
+  width: 20px;
+  border-bottom: 2px solid #7e7e7e;
+  margin: auto;
+  margin-top: 15px;
+}
+.section-fact h4 {
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.section-fact p {
+  margin-top: 10px;
+  font-size: 13px;
+  color: #999;
+}
+/*------------------------------------------------*/
+/*Share Section*/
+
+.section-share {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #fff;
+  color: #999;
+}
+.section-share--legend {
+  display: flex;
+  align-items: center;
+  margin-right: 40px;
+}
+.section-share--legend img {
+  margin-right: 10px;
+}
+.section-share--item {
+  font-size: 12px;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.section-share--icon {
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  background-color: #ccc;
+  margin-right: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 300ms ease-in-out;
+}
+.section-share--icon img {
+  height: 33px;
+}
+.section-share--icon.twitter {
+  background-color: #34c5f0;
+}
+.section-share--icon.linkedin {
+  background-color: #127cb4;
+}
+.section-share--icon.facebook {
+  background-color: #336297;
+}
+.section-share--icon.googleplus {
+  background-color: #e74237;
+}
+.section-share--icon.pinterest {
+  background-color: #b71c29;
+}
+
+.section-share--icon:hover {
+  background-color: #000;
+  transform: scale(1.15);
+}
+
+/*----------------------------------------*/
+
+/*Contact section*/
+
+.section-contact {
+  max-width: 450px;
+  margin: auto;
+  text-align: center;
+}
+.section-contact input[type="text"],
+.section-contact textarea {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 0;
+  background: transparent;
+  border-bottom: 1px solid #ccc;
+  outline: 0;
+  margin-top: 10px;
+}
+.section-contact textarea {
+  height: 100px;
+  resize: none;
+}
+.section-contact--split {
+  display: flex;
+}
+.section-contact--split input:first-child {
+  margin-right: 20px;
+}
